<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_label" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <EditText
        android:id="@+id/addLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addlabeledittext" />

    <TextView
        android:id="@+id/exceptConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initExceptConnect" />

    <TextView
        android:id="@+id/exceptAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initExceptAdd" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/labelname" />

</LinearLayout>