<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_wifi"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />
 

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
 	<ToggleButton
        android:id="@+id/onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/wifistate"
        android:layout_width="106dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />
    
</LinearLayout>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/scan_wifi"
      android:textAppearance="?android:attr/textAppearanceLarge" 
      />

  <Button
      android:id="@+id/scan"
      android:layout_width="75dp"
      android:layout_height="75dp"
      android:text="@string/Scan_button" />

  <ScrollView
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

          <TextView
              android:id="@+id/textStatus"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/program_title" />

      </LinearLayout>
  </ScrollView>

</LinearLayout>
